; ModuleID = '/home/carl/AnghaBench/radare2/libr/anal/p/extr_anal_8051.c_i8051_reg_write.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/anal/p/extr_anal_8051.c_i8051_reg_write.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@R_REG_TYPE_GPR = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i8*, i32)* @i8051_reg_write to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @i8051_reg_write(i32* %0, i8* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  store i32* %0, i32** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32 %2, i32* %7, align 4
  %9 = load i32*, i32** %5, align 8
  %10 = icmp ne i32* %9, null
  br i1 %10, label %11, label %24

11:                                               ; preds = %3
  %12 = load i32*, i32** %5, align 8
  %13 = load i8*, i8** %6, align 8
  %14 = load i32, i32* @R_REG_TYPE_GPR, align 4
  %15 = call i32* @r_reg_get(i32* %12, i8* %13, i32 %14)
  store i32* %15, i32** %8, align 8
  %16 = load i32*, i32** %8, align 8
  %17 = icmp ne i32* %16, null
  br i1 %17, label %18, label %23

18:                                               ; preds = %11
  %19 = load i32*, i32** %5, align 8
  %20 = load i32*, i32** %8, align 8
  %21 = load i32, i32* %7, align 4
  %22 = call i32 @r_reg_set_value(i32* %19, i32* %20, i32 %21)
  store i32 1, i32* %4, align 4
  br label %25

23:                                               ; preds = %11
  br label %24

24:                                               ; preds = %23, %3
  store i32 0, i32* %4, align 4
  br label %25

25:                                               ; preds = %24, %18
  %26 = load i32, i32* %4, align 4
  ret i32 %26
}

declare dso_local i32* @r_reg_get(i32*, i8*, i32) #1

declare dso_local i32 @r_reg_set_value(i32*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
